<resources>
    <string name="app_name">Syntax</string>
    <string name="action_settings">More Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptySymbol"><![CDATA[</>]]></string>
    <string name="explore_coding">_explore coding_</string>
    <string name="hint_text">Search concepts....</string>
    <string name="title_activity_concept">conceptActivity</string>
    <string name="c_notes"><![CDATA[Initialization declares the initial value of the controlling variable. The controlling variable can be defined in-line with the for loop, or defined previously. Typically, the for loop uses an integer variable.r\nr\nbooleanExpression is the controlling statement that must be true in order for the \'for\' structure to loop and execute. booleanExpression must result in either a true or false output. It is created using comparing operators (==, >, <, >=, <=, !=). There can also be multiple boolean expressions within the parentheses (booleanExpression). The boolean expressions are connected through logical operators (&&, ||, !). r\nr\nUpdate is the change in the controlling variable that occurs after each execution of the statements. It performs an arithmetic operation on the controlling variable.]]></string>
    <string name="c_description">The for-each loop iterates through every element in the array, without specifying size.</string>
    <string name="syntax">for(initialization; booleanExpression; update) {r\n //statementsr\n} //end for loopr\n</string>
</resources>
